--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0",
+    "styled-icons": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
