--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-loader-spinner": "^3.1.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
