--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-loader-spinner": "^3.1.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "styled-components": "^4.4.0",
-    "styled-icons": "^8.6.0"
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
