--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "styled-components": "^4.4.0",
+    "styled-icons": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
