--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "numeral": "^2.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-loader-spinner": "^3.1.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "scss": "^0.2.4",
